--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+WAREHOUSE_API_URI=http://laravel.order/api
+ORDER_API_URI=http://laravel.order/api
