--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,13 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_CONNECTION=warehouse
+DB_HOST=119.29.141.207
+DB_PORT=3306
+DB_DATABASE=zuji_warehouse
+DB_USERNAME=root
+DB_PASSWORD=d^GHL,Oc@De3jW
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
