--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-PAY_TERRACE_URL=https://dev-pay-zuji.huishoubao.com/api
+PAY_SYSTEM_URL=https://dev-pay-zuji.huishoubao.com/api
+PAY_APP_ID=1
 WAREHOUSE_API_URI=http://laravel.order/api
 ORDER_API_URI=http://laravel.order/api
