--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,28 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZSomZcZfYh0+HWVuoMkM8aqB5xq66zJ4l2S5t8UQWyU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-
-DB_CONNECTION=warehouse
 DB_HOST=119.29.141.207
 DB_PORT=3306
-DB_DATABASE=zuji_warehouse
+DB_DATABASE=zuji_order
 DB_USERNAME=root
 DB_PASSWORD=d^GHL,Oc@De3jW
+
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=zuji_order
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -41,7 +40,38 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-PAY_SYSTEM_URL=https://dev-pay-zuji.huishoubao.com/api
-PAY_APP_ID=1
-WAREHOUSE_API_URI=http://laravel.order/api
-ORDER_API_URI=http://laravel.order/api
+
+//api参数
+API_STANDARDS_TREE=prs
+API_SUBTYPE=zuji_order
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
+
+//接口访问频率
+RATE_LIMITS_EXPIRES=1
+RATE_LIMITS =1
+
+JWT_SECRET=sDahp5xnOH8DlFivL7ap45z6bCrACkl2
+
+// 系统APPID
+APPID = 1
+
+// 订单系统
+API_URLS['ORDER_SYSTEM'] = http://order.com
+// 收发货系统
+API_URLS['WAREHOUSE_SYSTEM'] = http://warehouse.com
+
+// 商品系统系统
+GOODS_API = https://dev-api-zuji.huishoubao.com/api.php
+
+// 支付系统
+PAY_API = https://dev-pay-zuji.huishoubao.com/api
+PAY_APPID = 1
+
+// 日志系统
+LOG_API = http://192.168.1.111:15180/log
+
+// 任务系统
+JOB_API=http://10.104.14.89:8082/javaserver/lts/jobs
+JOB_AUTH=7ZT%SC8HB4*Ad$bWyEaj2mBy%qd2G49A
