--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
+        "overtrue/laravel-query-logger": "^1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
     },
